menuOverflow fixed

--- a/components/layout/header/MainMenu.module.scss
+++ b/components/layout/header/MainMenu.module.scss
@@ -6,7 +6,6 @@
     margin: 20px;
     overflow-x: auto;
     scroll-behavior: smooth;
-    width: 100%;
     
 
     // .mainMenu{
